# mediakeys

./: Cargo.toml  README.md
src/: hotkeys.rs  main.rs  tray_icon.rs
